fikset issue #54: document manager collapser nå inn i hamburger menyen når du har floating mode skrudd på

--- a/styling/texteditor.scss
+++ b/styling/texteditor.scss
@@ -1313,7 +1313,6 @@ input:checked + .slider:before {
 
     .document-manager {
         position: fixed;
-        left: 0.5%;
         top: 50%;
         height: 98%;
         transform: translateY(-50%);
